- Applied the above patch to the win32 TRE dll/lib files.
- Fixed a problem with vhost::swhois not being displayed remotely (#0001702) reported by 
  medice.
- Windows: Updated makefile/unrealinst.iss/zip.h to use zlib 1.2.1.
- Updated credits
- German doc updates (spelling+synch).
- Updated /credits a bit more
- Updated the /stats ? output to say Q is sqline and q is ban nick (#0001689) reported
  by Alzirr
- Made a note in example.conf about not using link::options::autoconnect for services
  (#0001674) suggested by fez
- Fixed a typo in /credits
- Fixed something if sptr->user->virthost was NULL (which is/should never be the case),
  just to be sure... (#0001724).
- Updated server<->server code for MODE so operoverride bug #0001704 and other
  feature requests can be fixed/added in the future (3.2.1).
- Fixed /who +m bug for opers, reported by Bugz (#0001715).
- Fixed halfop mode code to not check remote halfop modes (desynch danger).
- Force a TRE recompile if ./Config is re-run, due to timestamp fun if you were
  upgrading to CVS every time TRE was not recompiled even if you did make clean.
- Made ./unreal rehash (= kill -1 <pid>) also reread motd/rules/etc just as a
  normal /rehash does, reported by superh (#0001699).
- Various doc/text updates
- Added some release notes already.
- Fixed /rehash bug if an .so (or remote include?) failed to load properly,
  reported by fez (#0001736).
- doc/unreal32docs.html and help.conf updates (#0001734 + other stuff).
- spamfilter.conf: added signatures for Gaggle worm.
- Changed version to pre1
- Fixed SJOIN bug: it sometimes was setting too many modes at once.
- Minor sajoin/sapart ERR_NEEDMOREPARAMS tweak.
** internal pre1 release **
- Docs/help.conf tweak on /connect syntax (#0001755).
- German doc updates (from April 18) + gzline docs tweak.
- Fixed some remote includes issues and added a connect/transfer timeout, server should
  now no longer be frozen if the site is unreachable. Reported by Ron2K (#0001751).