@@ -22,8 +22,8 @@
 <div align="center"><b><font size="7">UnrealIRCd</font></b><br>
   <font size="4"><a href="http://www.unrealircd.com">http://www.unrealircd.com</a></font><br>
   <font size="4">Version: 3.2</font><br>
-  <b>Aktuelle Version:</b> 3.2 *CVS*<br>
-  <b>Letztes Dokumentation Update:</b>    2004-04-23 </div>
+  <b>Aktuelle Version:</b> 3.2<br>
+  <b>Letztes Dokumentation Update:</b>    2004-04-24 </div>
   <b>Head Coders:</b> Stskeeps / codemastr / Syzop / Luke<br>
   <b>Contributors:</b>  McSkaf / Zogg / NiQuiL / assyrian / chasm / DrBin / llthangel / Griever / nighthawk<br>
 <b>Dokumentation</b><b>:</b> CKnight^ / Syzop<br>
@@ -202,8 +202,8 @@ Bug gemeldet wird!</p></div>
   </a>  senden. <p><b>Installationsanleitungen</b><br>
 Linux:<br>
 <ol>
-<li>gunzip -d Unreal3.2-pre1.tar.gz
-<li>tar xvf Unreal3.2-RC1-pre1.tar.gz
+<li>gunzip -d Unreal3.2.tar.gz
+<li>tar xvf Unreal3.2-RC1.tar
 <li>cd Unreal3.2
 <li>./Config
 <li>Die hierbei angezeigten Fragen nach bestem Wissen beantworten. Allgemein ist
